Add required packages for crypto.

--- a/airflow/map.jinja
+++ b/airflow/map.jinja
@@ -6,6 +6,8 @@ Debian:
   - python-virtualenv
   - python3-dev
   - libpq-dev
+  - libssl-dev
+  - libffi-dev
   dir:
     home: /srv/airflow
     workspace: /srv/airflow
