--- a/airflow/map.jinja
+++ b/airflow/map.jinja
@@ -24,3 +24,30 @@ Debian:
 {%- endload %}
 
 {%- set server = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('airflow:server')) %}
+
+
+{%- load_yaml as base_defaults %}
+Debian:
+  pkgs:
+  - python3-pip
+  - python-virtualenv
+  - python3-dev
+  - libpq-dev
+  - libssl-dev
+  - libffi-dev
+  dir:
+    home: /srv/airflow
+    workspace: /srv/airflow
+  web_workers:
+    engine: sync
+    number: 4
+  workers:
+    engine: CeleryExecutor
+    number: 32
+  auth:
+    engine: password
+    enabled: false
+
+{%- endload %}
+
+{%- set worker = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('airflow:worker')) %}
