Make configurable pool size and recycle.

--- a/airflow/map.jinja
+++ b/airflow/map.jinja
@@ -20,6 +20,10 @@ Debian:
   auth:
     engine: password
     enabled: false
+  database:
+    pool:
+      size: 5
+      recycle: 3600
 
 {%- endload %}
 
